0.26
Removed the bdb dataset implementation.

0.25
Added a new osmosis-extract-mysql application for extracting regular changesets from mysql.
Removed use of String.isEmpty to minimise Java5 incompatibility.
Modified the default pipe connectivity functionality to use stack-based connectivity instead of queue-based connectivity.
Added a populateCurrentTables option to the --write-mysql-change task to match the --write-mysql task.
Added validation code to the merge tasks to verify that input data is sorted.
Enhanced serialisation code to eliminate class identification information in the stream where single data types are being stored.
Fixed a bug in the ListIdTracker class where unsorted ids were not being sorted correctly.
Command line applications now returns status codes, 0 for success, non-zero for failure.
Fixed the --read-api short name to be --ra instead of --wa.
Updated store implementations to use buffered io providing significant performance improvements.
Added a new osmosis-test-users-for-utf8 application for verifying the data integrity of the production user table.
Added "bound" support to the pipeline.
Added "-" alias for stdin/stdout to file reading/writing tasks for Cygwin & Windows
Added a new dataset task --write-bdb for writing to a Berkeley DB implementation of a dataset.
Added a new dataset task --read-bdb for reading from a Berkeley DB implementation of a dataset.
Added a new dataset task --write-customdb for writing to a custom implementation of a dataset.
Added a new dataset task --read-customdb for reading from a custom implementation of a dataset.
Added a new dataset task --write-pgsql-simple for writing to a PostgreSQL implementation of a dataset.
Added a new dataset task --write-pgsql-simple-dump for writing "COPY" load files for a PostgreSQL implementation of a dataset.
Added a new dataset task --truncate-pgsql-simple for truncating all PostgreSQL dataset tables.